# rp2350w-embassy-template

./: .env.template  .envrc  CLAUDE.md  Cargo.toml  LICENSE  README.md  clippy.toml  flake.nix  memory.x  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: build.yml  lint.yml  test.yml
scripts/: bake-cyw43.sh  lint.sh
src/: lib.rs  logging.rs  macros.rs  main.rs  networking.rs  resources.rs
src/networking/: wifi.rs
