[package]
name = "rp2350w-embassy-template"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rp2350w-embassy-template"
test = false

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
critical-section = { version = "1.2", default-features = false }

defmt = "^1.0.1"
defmt-rtt = "^1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

embassy-executor = { version = "0.9.1", features = ["defmt", "arch-cortex-m", "executor-thread"] }
embassy-rp = { version = "0.8.0", features = ["rp235xa", "time-driver", "critical-section-impl", "binary-info", "defmt"] }
embedded-hal = "1.0.0"

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

[package.metadata.cargo-machete]
ignored = ["critical-section", "cortex-m", "cortex-m-rt", "embedded-hal"]
