[package]
name = "rp2350w-embassy-template"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rp2350w-embassy-template-bin"
path = "src/bin/main.rs"
required-features = ["bin"]

[features]
default = ["bin", "wifi"]
bin = ["embassy-rp", "defmt"]
baked-cyw43 = []
wifi = ["bin", "cyw43", "cyw43-pio"]
log = ["dep:log"]
defmt = []

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
critical-section = { version = "1.2", default-features = false }

defmt = "^1.0.1"
defmt-or-log = "0.2.2" 
defmt-rtt = "^1.0.0"
log = { version = "0.4.26", optional = true }
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

embassy-executor = { version = "0.9.1", features = ["defmt", "arch-cortex-m", "executor-thread"] }
embassy-net = { version = "0.7.1", features = ["defmt", "tcp", "raw", "dhcpv4", "medium-ethernet", "dns"] }
embassy-rp = { version = "0.8.0", features = ["rp235xa", "time-driver", "critical-section-impl", "binary-info", "defmt"], optional = true }
embedded-hal = "1.0.0"

cyw43 = { version = "0.5.0", features = ["defmt", "firmware-logs"], optional = true }
cyw43-pio = { version = "0.8.0", features = ["defmt"], optional = true }

assign-resources = "0.5.0"
embassy-futures = "0.1.2"
embassy-time = "0.5.0"
static_cell = "2.1.1"

[target.'cfg(target_family="unix")'.dependencies]
embassy-executor = { version = "0.9.1", features = ["arch-std"] }
defmt-or-log = { version = "0.2.2", features = ["log"] }

[target.'cfg(not(target_family="unix"))'.dependencies]
embassy-executor = { version = "0.9.1", features = ["arch-cortex-m"] }
defmt-or-log = { version = "0.2.2", features = ["defmt"] }

[dev-dependencies]
env_logger = "0.11.5"

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

[package.metadata.cargo-machete]
ignored = ["critical-section", "cortex-m", "cortex-m-rt", "embedded-hal", "log", "defmt"]
